0.55.2.0 (relative to 0.55.1.0)
========

Improvements
------------

- Stats app : Added `-postLoadScript` command line argument. This can be used to perform post-processing of the loaded script before stats are gathered.

Fixes
-----

- Viewer : Fixed X-Ray shading mode on MacOS (#3473).
- Caching : Changed the cache used in various sub-systems to avoid potential compute failures (#3476).
- LRUCache : Fixed handling of cases where value computation for a cache-miss was cancelled in-flight, which then prevented the value ever being successfully retrieved (#3469).

0.55.1.0 (relative to 0.55.0.0)
========

Improvements
------------

- Stats app : Added node compute counts to performanceMonitor script annotations.
- UIEditor :
  - Made the Plugs tab resize the editor window so the Presets section is fully visible when expanded.
  - Added options to the Node tab to turn on and off Box node plug creator decorations.

Fixes
-----

- Viewer : Fixed light filter visualisation.
- ArnoldLightFilter : Fixed bug which caused animated light blockers to lose their transform.
- NodeEditor : Fixed bug that allowed drag and drop to create unwanted input connections to output plugs.
- GraphComponent : Fixed bug that allowed construction with an invalid name (#3436).
- Layouts : Keyboard shortcuts will now work in detached panels restored with a layout.
- Rotate/TranslateTool : Fixed a potential crash if targeted mode was used with an empty selection.
- RotateTool : Fixed a bug when applying targeted mode rotations that introduced arbitrary roll around the z-axis (#3439).
- TabbedContainer : Fixed a bug that caused an exception when the last tab in a container was closed.
- ArnoldLight : Fixed a bug that prevented OSL shaders being used with Arnold lights.
- GraphEditor : Fixed several bugs and a crash that could occur when a parent of the editor's root node was changed or deleted.
- Parent : Fixed bug which prevented loading of Parent nodes with a promoted `children` plug (#3464).